# pyranges_plot

./: .readthedocs.yaml  README.md  project.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: continuous_integration.yml
doc/: Makefile  conf.py  prp_plot.rst
docs/: api_reference.rst  conf.py  index.rst  installation.rst  make.bat  prp_engine.rst  prp_id_col.rst  prp_options.rst  prp_plot.rst  prp_registerplot.rst  prp_scatter.rst  prp_settings.rst  prp_vcf.rst  requirements.txt  tutorial.rst
docs/_static/: custom.css
examples/: options_fig.py  pr_fig_2.py  pr_fig_3a.py  pr_fig_3b.py  pr_fig_3c.py  pr_fig_4.py  pr_fig_a.py  pr_fig_b.py  pr_fig_c.py  pr_figs_1_2.py  time_test.py
src/pyranges_plot/: __init__.py  core.py  data_preparation.py  example_data.py  introns_off.py  make_subsets.py  names.py  plot_features.py  plot_main.py  pr_register_plot.py
src/pyranges_plot/data/: ncbi.gff3
src/pyranges_plot/matplotlib_base/: core.py  data2plot.py  fig_axes.py  plot_exons_plt.py
src/pyranges_plot/plotly_base/: core.py  data2plot.py  fig_axes.py  plot_exons_ply.py
src/pyranges_plot/vcf/: __init__.py  make_subsets.py  vcf_preparation.py  vcf_reader.py
tests/: test_mpl.py  test_ply.py  test_view.py
